media_dir error fixed

--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ password = test1234
 database = testap
 
 [Scrape]
-media_dir = 
-max_indexpages = 400/mnt/nassys
+media_dir = /mnt/nassys
+max_indexpages = 400
 verboselevel = 2
 forceindexscan = True    
 forcepagescan = True
