updated security settings for docker using args for uid and group

--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,7 @@ verboselevel = 2
 forceindexscan = True    
 forcepagescan = True
 daystorescan = 31
+
+[Logging]
+level = DEBUG
+flaskdebug = True
