--- a/config.ini
+++ b/config.ini
@@ -13,5 +13,6 @@ forcepagescan = True
 daystorescan = 31
 
 [Logging]
-level = DEBUG
+# DEBUG, INFO, WARNING, ERROR, CRITICAL
+level = DEBUG  
 flaskdebug = True
