updated to log all using config.ini and updated dockerfile to handle already existing groupid's

--- a/config.ini
+++ b/config.ini
@@ -14,5 +14,5 @@ daystorescan = 31
 
 [Logging]
 # DEBUG, INFO, WARNING, ERROR, CRITICAL
-level = DEBUG  
-flaskdebug = True
+level = ERROR  
+flaskdebug = False
