--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ password = test1234
 database = testap
 
 [Scrape]
-media_dir = /mnt/nassys
+media_dir = /mnt/nasdata/pictures
 max_indexpages = 400
 verboselevel = 2
 forceindexscan = True    
@@ -14,5 +14,5 @@ daystorescan = 31
 
 [Logging]
 # DEBUG, INFO, WARNING, ERROR, CRITICAL
-level = ERROR  
-flaskdebug = False
+level = DEBUG  
+flaskdebug = True
